RDMA/iwcm: Fix use-after-free of work objects after cm_id destruction (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7737,6 +7737,7 @@
 	patches.kernel.org/6.12.35-113-clk-meson-g12a-add-missing-fclk_div2-to-spicc.patch
 	patches.kernel.org/6.12.35-114-ipc-fix-to-protect-IPCS-lookups-using-RCU.patch
 	patches.kernel.org/6.12.35-115-watchdog-fix-watchdog-may-detect-false-positi.patch
+	patches.kernel.org/6.12.35-116-RDMA-iwcm-Fix-use-after-free-of-work-objects-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
