--- a/series.conf
+++ b/series.conf
@@ -8008,6 +8008,7 @@
 	patches.kernel.org/6.12.35-384-net-lan743x-fix-potential-out-of-bounds-write.patch
 	patches.kernel.org/6.12.35-385-ublk-santizize-the-arguments-from-userspace-w.patch
 	patches.kernel.org/6.12.35-386-drm-xe-Wire-up-device-shutdown-handler.patch
+	patches.kernel.org/6.12.35-387-drm-xe-gt-Update-handling-of-xe_force_wake_ge.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
