--- a/series.conf
+++ b/series.conf
@@ -7728,6 +7728,7 @@
 	patches.kernel.org/6.12.35-104-net-sched-fix-use-after-free-in-taprio_dev_no.patch
 	patches.kernel.org/6.12.35-105-net-ftgmac100-select-FIXED_PHY.patch
 	patches.kernel.org/6.12.35-106-iommu-vt-d-Restore-context-entry-setup-order-.patch
+	patches.kernel.org/6.12.35-107-fbdev-Fix-do_register_framebuffer-to-prevent-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
