iio: accel: fxls8962af: Fix temperature calculation (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7956,6 +7956,7 @@
 	patches.kernel.org/6.12.35-332-ALSA-hda-realtek-enable-headset-mic-on-Latitu.patch
 	patches.kernel.org/6.12.35-333-ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-Viv.patch
 	patches.kernel.org/6.12.35-334-ALSA-hda-realtek-Add-quirk-for-Asus-GU605C.patch
+	patches.kernel.org/6.12.35-335-iio-accel-fxls8962af-Fix-temperature-calculat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
