--- a/series.conf
+++ b/series.conf
@@ -7753,6 +7753,7 @@
 	patches.kernel.org/6.12.35-129-dm-lock-limits-when-reading-them.patch
 	patches.kernel.org/6.12.35-130-phy-fsl-imx8mq-usb-fix-phy_tx_vboost_level_fr.patch
 	patches.kernel.org/6.12.35-131-net-ch9200-fix-uninitialised-access-during-mi.patch
+	patches.kernel.org/6.12.35-132-KVM-s390-rename-PROT_NONE-to-PROT_TYPE_DUMMY.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
