--- a/series.conf
+++ b/series.conf
@@ -7916,6 +7916,7 @@
 	patches.kernel.org/6.12.35-292-powerpc-eeh-Fix-missing-PE-bridge-reconfigura.patch
 	patches.kernel.org/6.12.35-293-io_uring-kbuf-don-t-truncate-end-buffer-for-m.patch
 	patches.kernel.org/6.12.35-294-io_uring-fix-task-leak-issue-in-io_wq_create.patch
+	patches.kernel.org/6.12.35-295-drivers-rapidio-rio_cm.c-prevent-possible-hea.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
