ASoC: meson: meson-card-utils: use of_property_present() for DT parsing (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7631,6 +7631,7 @@
 	patches.kernel.org/6.12.35-007-crypto-qat-add-shutdown-handler-to-qat_c62x.patch
 	patches.kernel.org/6.12.35-008-crypto-qat-add-shutdown-handler-to-qat_dh895x.patch
 	patches.kernel.org/6.12.35-009-ASoC-qcom-sdm845-Add-error-handling-in-sdm845.patch
+	patches.kernel.org/6.12.35-010-ASoC-meson-meson-card-utils-use-of_property_p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
