--- a/series.conf
+++ b/series.conf
@@ -8035,6 +8035,7 @@
 	patches.kernel.org/6.12.35-411-gpio-mlxbf3-only-get-IRQ-for-device-instance-.patch
 	patches.kernel.org/6.12.35-412-cifs-Remove-duplicate-fattr-cf_dtype-assignme.patch
 	patches.kernel.org/6.12.35-413-bpftool-Fix-cgroup-command-to-only-show-cgrou.patch
+	patches.kernel.org/6.12.35-414-Linux-6.12.35.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
