--- a/series.conf
+++ b/series.conf
@@ -7973,6 +7973,7 @@
 	patches.kernel.org/6.12.35-349-ipv6-replace-ipcm6_init-calls-with-ipcm6_init.patch
 	patches.kernel.org/6.12.35-350-smb-fix-secondary-channel-creation-issue-with.patch
 	patches.kernel.org/6.12.35-351-drm-msm-disp-Correct-porch-timing-for-SDM845.patch
+	patches.kernel.org/6.12.35-352-drm-msm-dsi-dsi_phy_10nm-Fix-missing-initial-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
