io_uring/kbuf: account ring io_buffer_list memory (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7634,6 +7634,7 @@
 	patches.kernel.org/6.12.35-010-ASoC-meson-meson-card-utils-use-of_property_p.patch
 	patches.kernel.org/6.12.35-011-ASoC-amd-sof_amd_sdw-Fix-unlikely-uninitializ.patch
 	patches.kernel.org/6.12.35-012-io_uring-account-drain-memory-to-cgroup.patch
+	patches.kernel.org/6.12.35-013-io_uring-kbuf-account-ring-io_buffer_list-mem.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
