serial: sh-sci: Clean sci_ports[0] after at earlycon exit (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8017,6 +8017,7 @@
 	patches.kernel.org/6.12.35-393-EDAC-amd64-Correct-number-of-UMCs-for-family-.patch
 	patches.kernel.org/6.12.35-394-dt-bindings-i2c-nvidia-tegra20-i2c-Specify-th.patch
 	patches.kernel.org/6.12.35-395-smb-Log-an-error-when-close_all_cached_dirs-f.patch
+	patches.kernel.org/6.12.35-396-serial-sh-sci-Clean-sci_ports-0-after-at-earl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
