ipv4/route: Use this_cpu_inc() for stats on PREEMPT_RT (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7842,6 +7842,7 @@
 	patches.kernel.org/6.12.35-218-tcp-fix-initial-tp-rcvq_space.space-value-for.patch
 	patches.kernel.org/6.12.35-219-tcp-add-receive-queue-awareness-in-tcp_rcv_sp.patch
 	patches.kernel.org/6.12.35-220-x86-sgx-Prevent-attempts-to-reclaim-poisoned-.patch
+	patches.kernel.org/6.12.35-221-ipv4-route-Use-this_cpu_inc-for-stats-on-PREE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
