media: cxusb: no longer judge rbuf when the write fails (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7672,6 +7672,7 @@
 	patches.kernel.org/6.12.35-048-media-ccs-pll-Start-OP-pre-PLL-multiplier-sea.patch
 	patches.kernel.org/6.12.35-049-media-ccs-pll-Correct-the-upper-limit-of-maxi.patch
 	patches.kernel.org/6.12.35-050-media-ccs-pll-Check-for-too-high-VT-PLL-multi.patch
+	patches.kernel.org/6.12.35-051-media-cxusb-no-longer-judge-rbuf-when-the-wri.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
