ipc: fix to protect IPCS lookups using RCU (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7735,6 +7735,7 @@
 	patches.kernel.org/6.12.35-111-vgacon-Add-check-for-vc_origin-address-range-.patch
 	patches.kernel.org/6.12.35-112-parisc-fix-building-with-gcc-15.patch
 	patches.kernel.org/6.12.35-113-clk-meson-g12a-add-missing-fclk_div2-to-spicc.patch
+	patches.kernel.org/6.12.35-114-ipc-fix-to-protect-IPCS-lookups-using-RCU.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
