pinctrl: armada-37xx: propagate error from armada_37xx_gpio_get() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7852,6 +7852,7 @@
 	patches.kernel.org/6.12.35-228-net-stmmac-generate-software-timestamp-just-b.patch
 	patches.kernel.org/6.12.35-229-pinctrl-armada-37xx-propagate-error-from-arma.patch
 	patches.kernel.org/6.12.35-230-libbpf-Check-bpf_map_skeleton-link-for-NULL.patch
+	patches.kernel.org/6.12.35-231-pinctrl-armada-37xx-propagate-error-from-arma.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
