--- a/series.conf
+++ b/series.conf
@@ -7843,6 +7843,7 @@
 	patches.kernel.org/6.12.35-219-tcp-add-receive-queue-awareness-in-tcp_rcv_sp.patch
 	patches.kernel.org/6.12.35-220-x86-sgx-Prevent-attempts-to-reclaim-poisoned-.patch
 	patches.kernel.org/6.12.35-221-ipv4-route-Use-this_cpu_inc-for-stats-on-PREE.patch
+	patches.kernel.org/6.12.35-222-net-page_pool-Don-t-recycle-into-cache-on-PRE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
