NFC: nci: uart: Set tty->disc_data only in success path (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7724,6 +7724,7 @@
 	patches.kernel.org/6.12.35-100-f2fs-prevent-kernel-warning-due-to-negative-i.patch
 	patches.kernel.org/6.12.35-101-f2fs-fix-to-do-sanity-check-on-sit_bitmap_siz.patch
 	patches.kernel.org/6.12.35-102-hwmon-ftsteutates-Fix-TOCTOU-race-in-fts_read.patch
+	patches.kernel.org/6.12.35-103-NFC-nci-uart-Set-tty-disc_data-only-in-succes.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
