--- a/series.conf
+++ b/series.conf
@@ -7688,6 +7688,7 @@
 	patches.kernel.org/6.12.35-064-media-vivid-Change-the-siize-of-the-composing.patch
 	patches.kernel.org/6.12.35-065-media-imx-jpeg-Drop-the-first-error-frames.patch
 	patches.kernel.org/6.12.35-066-media-imx-jpeg-Move-mxc_jpeg_free_slot_data-a.patch
+	patches.kernel.org/6.12.35-067-media-imx-jpeg-Reset-slot-data-pointers-when-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
