--- a/series.conf
+++ b/series.conf
@@ -7876,6 +7876,7 @@
 	patches.kernel.org/6.12.35-252-Revert-mac80211-Dynamically-set-CoDel-paramet.patch
 	patches.kernel.org/6.12.35-253-wifi-iwlwifi-Add-missing-MODULE_FIRMWARE-for-.patch
 	patches.kernel.org/6.12.35-254-net-bridge-mcast-update-multicast-contex-when.patch
+	patches.kernel.org/6.12.35-255-net-bridge-mcast-re-implement-br_multicast_-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
