--- a/series.conf
+++ b/series.conf
@@ -7999,6 +7999,7 @@
 	patches.kernel.org/6.12.35-375-ptp-fix-breakage-after-ptp_vclock_in_use-rewo.patch
 	patches.kernel.org/6.12.35-376-ptp-allow-reading-of-currently-dialed-frequen.patch
 	patches.kernel.org/6.12.35-377-wifi-carl9170-do-not-ping-device-which-has-fa.patch
+	patches.kernel.org/6.12.35-378-mpls-Use-rcu_dereference_rtnl-in-mpls_route_i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
