bpftool: Fix cgroup command to only show cgroup bpf programs (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8034,6 +8034,7 @@
 	patches.kernel.org/6.12.35-410-perf-test-Directory-file-descriptor-leak.patch
 	patches.kernel.org/6.12.35-411-gpio-mlxbf3-only-get-IRQ-for-device-instance-.patch
 	patches.kernel.org/6.12.35-412-cifs-Remove-duplicate-fattr-cf_dtype-assignme.patch
+	patches.kernel.org/6.12.35-413-bpftool-Fix-cgroup-command-to-only-show-cgrou.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
