media: ccs-pll: Correct the upper limit of maximum op_pre_pll_clk_div (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7670,6 +7670,7 @@
 	patches.kernel.org/6.12.35-046-media-ccs-pll-Start-VT-pre-PLL-multiplier-sea.patch
 	patches.kernel.org/6.12.35-047-media-ov2740-Move-pm-runtime-cleanup-on-probe.patch
 	patches.kernel.org/6.12.35-048-media-ccs-pll-Start-OP-pre-PLL-multiplier-sea.patch
+	patches.kernel.org/6.12.35-049-media-ccs-pll-Correct-the-upper-limit-of-maxi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
