wifi: ath12k: fix macro definition HAL_RX_MSDU_PKT_LENGTH_GET (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7832,6 +7832,7 @@
 	patches.kernel.org/6.12.35-208-i2c-npcm-Add-clock-toggle-recovery.patch
 	patches.kernel.org/6.12.35-209-clk-qcom-gcc-x1e80100-Set-FORCE-MEM-CORE-for-.patch
 	patches.kernel.org/6.12.35-210-net-dlink-add-synchronization-for-stats-updat.patch
+	patches.kernel.org/6.12.35-211-wifi-ath12k-fix-macro-definition-HAL_RX_MSDU_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
