watchdog: fix watchdog may detect false positive of softlockup (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7736,6 +7736,7 @@
 	patches.kernel.org/6.12.35-112-parisc-fix-building-with-gcc-15.patch
 	patches.kernel.org/6.12.35-113-clk-meson-g12a-add-missing-fclk_div2-to-spicc.patch
 	patches.kernel.org/6.12.35-114-ipc-fix-to-protect-IPCS-lookups-using-RCU.patch
+	patches.kernel.org/6.12.35-115-watchdog-fix-watchdog-may-detect-false-positi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
