--- a/series.conf
+++ b/series.conf
@@ -7858,6 +7858,7 @@
 	patches.kernel.org/6.12.35-234-wireless-purelifi-plfxlc-fix-memory-leak-in-p.patch
 	patches.kernel.org/6.12.35-235-wifi-mac80211-do-not-offer-a-mesh-path-if-for.patch
 	patches.kernel.org/6.12.35-236-clk-rockchip-rk3036-mark-ddrphy-as-critical.patch
+	patches.kernel.org/6.12.35-237-hid-asus-check-ROG-Ally-MCU-version-and-warn.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
