--- a/series.conf
+++ b/series.conf
@@ -7890,6 +7890,7 @@
 	patches.kernel.org/6.12.35-266-i40e-fix-MMIO-write-access-to-an-invalid-page.patch
 	patches.kernel.org/6.12.35-267-ixgbe-Fix-unreachable-retry-logic-in-combined.patch
 	patches.kernel.org/6.12.35-268-RDMA-hns-initialize-db-in-update_srq_db.patch
+	patches.kernel.org/6.12.35-269-ice-fix-check-for-existing-switch-rule.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
