bpf: Fix L4 csum update on IPv6 in CHECKSUM_COMPLETE (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7962,6 +7962,7 @@
 	patches.kernel.org/6.12.35-338-kbuild-rust-add-rustc-min-version-support-fun.patch
 	patches.kernel.org/6.12.35-339-rust-compile-libcore-with-edition-2024-for-1..patch
 	patches.kernel.org/6.12.35-340-net-Fix-checksum-update-for-ILA-adj-transport.patch
+	patches.kernel.org/6.12.35-341-bpf-Fix-L4-csum-update-on-IPv6-in-CHECKSUM_CO.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
