--- a/series.conf
+++ b/series.conf
@@ -7878,6 +7878,7 @@
 	patches.kernel.org/6.12.35-254-net-bridge-mcast-update-multicast-contex-when.patch
 	patches.kernel.org/6.12.35-255-net-bridge-mcast-re-implement-br_multicast_-e.patch
 	patches.kernel.org/6.12.35-256-vxlan-Do-not-treat-dst-cache-initialization-e.patch
+	patches.kernel.org/6.12.35-257-bnxt_en-Remove-unused-field-ref_count-in-stru.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
