--- a/series.conf
+++ b/series.conf
@@ -7708,6 +7708,7 @@
 	patches.kernel.org/6.12.35-084-ceph-set-superblock-s_magic-for-IMA-fsmagic-m.patch
 	patches.kernel.org/6.12.35-085-cgroup-freezer-fix-incomplete-freezing-when-a.patch
 	patches.kernel.org/6.12.35-086-bus-firewall-Fix-missing-static-inline-annota.patch
+	patches.kernel.org/6.12.35-087-ata-pata_via-Force-PIO-for-ATAPI-devices-on-V.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
