usbnet: asix AX88772: leave the carrier control to phylink (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7891,6 +7891,7 @@
 	patches.kernel.org/6.12.35-267-ixgbe-Fix-unreachable-retry-logic-in-combined.patch
 	patches.kernel.org/6.12.35-268-RDMA-hns-initialize-db-in-update_srq_db.patch
 	patches.kernel.org/6.12.35-269-ice-fix-check-for-existing-switch-rule.patch
+	patches.kernel.org/6.12.35-270-usbnet-asix-AX88772-leave-the-carrier-control.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
