--- a/series.conf
+++ b/series.conf
@@ -7770,6 +7770,7 @@
 	patches.kernel.org/6.12.35-146-smb-client-add-NULL-check-in-automount_fullpa.patch
 	patches.kernel.org/6.12.35-147-Drivers-hv-Allocate-interrupt-and-monitor-pag.patch
 	patches.kernel.org/6.12.35-148-uio_hv_generic-Use-correct-size-for-interrupt.patch
+	patches.kernel.org/6.12.35-149-uio_hv_generic-Align-ring-size-to-system-page.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
