ARM: OMAP2+: Fix l4ls clk domain handling in STANDBY (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7904,6 +7904,7 @@
 	patches.kernel.org/6.12.35-280-fbcon-Make-sure-modelist-not-set-on-unregiste.patch
 	patches.kernel.org/6.12.35-281-watchdog-da9052_wdt-respect-TWDMIN.patch
 	patches.kernel.org/6.12.35-282-bus-fsl-mc-increase-MC_CMD_COMPLETION_TIMEOUT.patch
+	patches.kernel.org/6.12.35-283-ARM-OMAP2-Fix-l4ls-clk-domain-handling-in-STA.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
