--- a/series.conf
+++ b/series.conf
@@ -7641,6 +7641,7 @@
 	patches.kernel.org/6.12.35-017-s390-pci-Allow-re-add-of-a-reserved-but-not-y.patch
 	patches.kernel.org/6.12.35-018-s390-pci-Serialize-device-addition-and-remova.patch
 	patches.kernel.org/6.12.35-019-regulator-max20086-Fix-MAX200086-chip-id.patch
+	patches.kernel.org/6.12.35-020-regulator-max20086-Change-enable-gpio-to-opti.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
