--- a/series.conf
+++ b/series.conf
@@ -7697,6 +7697,7 @@
 	patches.kernel.org/6.12.35-073-ARM-9447-1-arm-memremap-fix-arch_memremap_can.patch
 	patches.kernel.org/6.12.35-074-ARM-omap-pmic-cpcap-do-not-mess-around-withou.patch
 	patches.kernel.org/6.12.35-075-ASoC-codecs-wcd9375-Fix-double-free-of-regula.patch
+	patches.kernel.org/6.12.35-076-ASoC-codecs-wcd937x-Drop-unused-buck_supply.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
