drm/i915/pmu: Fix build error with GCOV and AutoFDO enabled (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7979,6 +7979,7 @@
 	patches.kernel.org/6.12.35-355-drm-ssd130x-fix-ssd132x_clear_screen-columns.patch
 	patches.kernel.org/6.12.35-356-ionic-Prevent-driver-fw-getting-out-of-sync-o.patch
 	patches.kernel.org/6.12.35-357-drm-nouveau-bl-increase-buffer-size-to-avoid-.patch
+	patches.kernel.org/6.12.35-358-drm-i915-pmu-Fix-build-error-with-GCOV-and-Au.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
