ftrace: Fix UAF when lookup kallsym after ftrace disabled (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7749,6 +7749,7 @@
 	patches.kernel.org/6.12.35-125-dm-mirror-fix-a-tiny-race-condition.patch
 	patches.kernel.org/6.12.35-126-dm-verity-fix-a-memory-leak-if-some-arguments.patch
 	patches.kernel.org/6.12.35-127-mtd-rawnand-qcom-Fix-read-len-for-onfi-param-.patch
+	patches.kernel.org/6.12.35-128-ftrace-Fix-UAF-when-lookup-kallsym-after-ftra.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
