--- a/series.conf
+++ b/series.conf
@@ -8015,6 +8015,7 @@
 	patches.kernel.org/6.12.35-391-net-atm-add-lec_mutex.patch
 	patches.kernel.org/6.12.35-392-net-atm-fix-proc-net-atm-lec-handling.patch
 	patches.kernel.org/6.12.35-393-EDAC-amd64-Correct-number-of-UMCs-for-family-.patch
+	patches.kernel.org/6.12.35-394-dt-bindings-i2c-nvidia-tegra20-i2c-Specify-th.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
