--- a/series.conf
+++ b/series.conf
@@ -7733,6 +7733,7 @@
 	patches.kernel.org/6.12.35-109-fbdev-Fix-fb_set_var-to-prevent-null-ptr-dere.patch
 	patches.kernel.org/6.12.35-110-parisc-unaligned-Fix-hex-output-to-show-8-hex.patch
 	patches.kernel.org/6.12.35-111-vgacon-Add-check-for-vc_origin-address-range-.patch
+	patches.kernel.org/6.12.35-112-parisc-fix-building-with-gcc-15.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
