media: i2c: imx335: Fix frame size enumeration (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7675,6 +7675,7 @@
 	patches.kernel.org/6.12.35-051-media-cxusb-no-longer-judge-rbuf-when-the-wri.patch
 	patches.kernel.org/6.12.35-052-media-davinci-vpif-Fix-memory-leak-in-probe-e.patch
 	patches.kernel.org/6.12.35-053-media-gspca-Add-error-handling-for-stv06xx_re.patch
+	patches.kernel.org/6.12.35-054-media-i2c-imx335-Fix-frame-size-enumeration.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
