--- a/series.conf
+++ b/series.conf
@@ -7817,6 +7817,7 @@
 	patches.kernel.org/6.12.35-193-f2fs-use-vmalloc-instead-of-kvmalloc-in-.init.patch
 	patches.kernel.org/6.12.35-194-bpf-Check-rcu_read_lock_trace_held-in-bpf_map.patch
 	patches.kernel.org/6.12.35-195-Bluetooth-btusb-Add-new-VID-PID-13d3-3584-for.patch
+	patches.kernel.org/6.12.35-196-i2c-designware-Invoke-runtime-suspend-on-quic.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
