sock: Correct error checking condition for (assign|release)_proto_idx() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7886,6 +7886,7 @@
 	patches.kernel.org/6.12.35-262-pinctrl-mcp23s08-Reset-all-pins-to-input-at-p.patch
 	patches.kernel.org/6.12.35-263-wifi-ath12k-fix-failed-to-set-mhi-state-error.patch
 	patches.kernel.org/6.12.35-264-scsi-lpfc-Use-memcpy-for-BIOS-version.patch
+	patches.kernel.org/6.12.35-265-sock-Correct-error-checking-condition-for-ass.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
