net/mlx5: HWS, Fix IP version decision (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7870,6 +7870,7 @@
 	patches.kernel.org/6.12.35-246-wifi-rtw89-8922a-fix-TX-fail-with-wrong-VCO-s.patch
 	patches.kernel.org/6.12.35-247-wifi-mac80211_hwsim-Prevent-tsf-from-setting-.patch
 	patches.kernel.org/6.12.35-248-netdevsim-Mark-NAPI-ID-on-skb-in-nsim_rcv.patch
+	patches.kernel.org/6.12.35-249-net-mlx5-HWS-Fix-IP-version-decision.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
