cifs: update dstaddr whenever channel iface is updated (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7765,6 +7765,7 @@
 	patches.kernel.org/6.12.35-141-remoteproc-core-Release-rproc-clean_table-aft.patch
 	patches.kernel.org/6.12.35-142-remoteproc-k3-m4-Don-t-assert-reset-in-detach.patch
 	patches.kernel.org/6.12.35-143-cifs-reset-connections-for-all-channels-when-.patch
+	patches.kernel.org/6.12.35-144-cifs-update-dstaddr-whenever-channel-iface-is.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
