--- a/series.conf
+++ b/series.conf
@@ -7978,6 +7978,7 @@
 	patches.kernel.org/6.12.35-354-drm-msm-a7xx-Call-CP_RESET_CONTEXT_STATE.patch
 	patches.kernel.org/6.12.35-355-drm-ssd130x-fix-ssd132x_clear_screen-columns.patch
 	patches.kernel.org/6.12.35-356-ionic-Prevent-driver-fw-getting-out-of-sync-o.patch
+	patches.kernel.org/6.12.35-357-drm-nouveau-bl-increase-buffer-size-to-avoid-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
