--- a/series.conf
+++ b/series.conf
@@ -8027,6 +8027,7 @@
 	patches.kernel.org/6.12.35-403-perf-core-Fix-WARN-in-perf_cgroup_switch.patch
 	patches.kernel.org/6.12.35-404-arm64-ptrace-Fix-stack-out-of-bounds-read-in-.patch
 	patches.kernel.org/6.12.35-405-scsi-elx-efct-Fix-memory-leak-in-efct_hw_pars.patch
+	patches.kernel.org/6.12.35-406-RISC-V-KVM-Fix-the-size-parameter-check-in-SB.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
