ACPICA: Apply pack(1) to union aml_resource (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7799,6 +7799,7 @@
 	patches.kernel.org/6.12.35-175-ACPI-bus-Bail-out-if-acpi_kobj-registration-f.patch
 	patches.kernel.org/6.12.35-176-ACPI-Add-missing-prototype-for-non-CONFIG_SUS.patch
 	patches.kernel.org/6.12.35-177-ACPICA-fix-acpi-parse-and-parseext-cache-leak.patch
+	patches.kernel.org/6.12.35-178-ACPICA-Apply-pack-1-to-union-aml_resource.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
