gpio: mlxbf3: only get IRQ for device instance 0 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8032,6 +8032,7 @@
 	patches.kernel.org/6.12.35-408-gpio-pca953x-fix-wrong-error-probe-return-val.patch
 	patches.kernel.org/6.12.35-409-perf-evsel-Missed-close-when-probing-hybrid-c.patch
 	patches.kernel.org/6.12.35-410-perf-test-Directory-file-descriptor-leak.patch
+	patches.kernel.org/6.12.35-411-gpio-mlxbf3-only-get-IRQ-for-device-instance-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
