--- a/series.conf
+++ b/series.conf
@@ -7921,6 +7921,7 @@
 	patches.kernel.org/6.12.35-297-platform-loongarch-laptop-Unregister-generic_.patch
 	patches.kernel.org/6.12.35-298-platform-loongarch-laptop-Add-backlight-power.patch
 	patches.kernel.org/6.12.35-299-LoongArch-vDSO-Correctly-use-asm-parameters-i.patch
+	patches.kernel.org/6.12.35-300-LoongArch-Avoid-using-r0-r1-as-mask-for-csrxc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
