tcp: fix tcp_packet_delayed() for tcp_is_non_sack_preventing_reopen() behavior (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8001,6 +8001,7 @@
 	patches.kernel.org/6.12.35-377-wifi-carl9170-do-not-ping-device-which-has-fa.patch
 	patches.kernel.org/6.12.35-378-mpls-Use-rcu_dereference_rtnl-in-mpls_route_i.patch
 	patches.kernel.org/6.12.35-379-atm-atmtcp-Free-invalid-length-skb-in-atmtcp_.patch
+	patches.kernel.org/6.12.35-380-tcp-fix-tcp_packet_delayed-for-tcp_is_non_sac.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
