--- a/series.conf
+++ b/series.conf
@@ -7810,6 +7810,7 @@
 	patches.kernel.org/6.12.35-186-gpiolib-of-Add-polarity-quirk-for-s5m8767.patch
 	patches.kernel.org/6.12.35-187-PM-runtime-fix-denying-of-auto-suspend-in-pm_.patch
 	patches.kernel.org/6.12.35-188-power-supply-max17040-adjust-thermal-channel-.patch
+	patches.kernel.org/6.12.35-189-ACPI-battery-negate-current-when-discharging.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
