--- a/series.conf
+++ b/series.conf
@@ -7763,6 +7763,7 @@
 	patches.kernel.org/6.12.35-139-regulator-max14577-Add-error-check-for-max145.patch
 	patches.kernel.org/6.12.35-140-remoteproc-core-Cleanup-acquired-resources-wh.patch
 	patches.kernel.org/6.12.35-141-remoteproc-core-Release-rproc-clean_table-aft.patch
+	patches.kernel.org/6.12.35-142-remoteproc-k3-m4-Don-t-assert-reset-in-detach.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
