ext4: inline: fix len overflow in ext4_prepare_inline_data (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7713,6 +7713,7 @@
 	patches.kernel.org/6.12.35-089-ata-ahci-Disallow-LPM-for-Asus-B550-F-motherb.patch
 	patches.kernel.org/6.12.35-090-bus-fsl-mc-do-not-add-a-device-link-for-the-U.patch
 	patches.kernel.org/6.12.35-091-bus-fsl-mc-fix-GET-SET_TAILDROP-command-ids.patch
+	patches.kernel.org/6.12.35-092-ext4-inline-fix-len-overflow-in-ext4_prepare_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
