--- a/series.conf
+++ b/series.conf
@@ -8031,6 +8031,7 @@
 	patches.kernel.org/6.12.35-407-RISC-V-KVM-Don-t-treat-SBI-HFENCE-calls-as-NO.patch
 	patches.kernel.org/6.12.35-408-gpio-pca953x-fix-wrong-error-probe-return-val.patch
 	patches.kernel.org/6.12.35-409-perf-evsel-Missed-close-when-probing-hybrid-c.patch
+	patches.kernel.org/6.12.35-410-perf-test-Directory-file-descriptor-leak.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
