--- a/series.conf
+++ b/series.conf
@@ -7821,6 +7821,7 @@
 	patches.kernel.org/6.12.35-197-wifi-mt76-mt7996-drop-fragments-with-multicas.patch
 	patches.kernel.org/6.12.35-198-emulex-benet-correct-command-version-selectio.patch
 	patches.kernel.org/6.12.35-199-Bluetooth-btusb-Add-new-VID-PID-13d3-3630-for.patch
+	patches.kernel.org/6.12.35-200-wifi-mt76-mt76x2-Add-support-for-LiteOn-WN451.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
