--- a/series.conf
+++ b/series.conf
@@ -7918,6 +7918,7 @@
 	patches.kernel.org/6.12.35-294-io_uring-fix-task-leak-issue-in-io_wq_create.patch
 	patches.kernel.org/6.12.35-295-drivers-rapidio-rio_cm.c-prevent-possible-hea.patch
 	patches.kernel.org/6.12.35-296-platform-loongarch-laptop-Get-brightness-sett.patch
+	patches.kernel.org/6.12.35-297-platform-loongarch-laptop-Unregister-generic_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
