--- a/series.conf
+++ b/series.conf
@@ -8011,6 +8011,7 @@
 	patches.kernel.org/6.12.35-387-drm-xe-gt-Update-handling-of-xe_force_wake_ge.patch
 	patches.kernel.org/6.12.35-388-drm-xe-bmg-Update-Wa_16023588340.patch
 	patches.kernel.org/6.12.35-389-calipso-Fix-null-ptr-deref-in-calipso_req_-se.patch
+	patches.kernel.org/6.12.35-390-mlxbf_gige-return-EPROBE_DEFER-if-PHY-IRQ-is-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
