net: ch9200: fix uninitialised access during mii_nway_restart (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7752,6 +7752,7 @@
 	patches.kernel.org/6.12.35-128-ftrace-Fix-UAF-when-lookup-kallsym-after-ftra.patch
 	patches.kernel.org/6.12.35-129-dm-lock-limits-when-reading-them.patch
 	patches.kernel.org/6.12.35-130-phy-fsl-imx8mq-usb-fix-phy_tx_vboost_level_fr.patch
+	patches.kernel.org/6.12.35-131-net-ch9200-fix-uninitialised-access-during-mi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
