--- a/series.conf
+++ b/series.conf
@@ -7714,6 +7714,7 @@
 	patches.kernel.org/6.12.35-090-bus-fsl-mc-do-not-add-a-device-link-for-the-U.patch
 	patches.kernel.org/6.12.35-091-bus-fsl-mc-fix-GET-SET_TAILDROP-command-ids.patch
 	patches.kernel.org/6.12.35-092-ext4-inline-fix-len-overflow-in-ext4_prepare_.patch
+	patches.kernel.org/6.12.35-093-ext4-fix-calculation-of-credits-for-extent-tr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
