iio: adc: ad7606_spi: fix reg write value mask (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7787,6 +7787,7 @@
 	patches.kernel.org/6.12.35-163-iio-imu-inv_icm42600-Fix-temperature-calculat.patch
 	patches.kernel.org/6.12.35-164-iio-adc-ad7944-mask-high-bits-on-direct-read.patch
 	patches.kernel.org/6.12.35-165-iio-adc-ti-ads1298-Kconfig-add-kfifo-dependen.patch
+	patches.kernel.org/6.12.35-166-iio-adc-ad7606_spi-fix-reg-write-value-mask.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
