selinux: fix selinux_xfrm_alloc_user() to set correct ctx_len (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7940,6 +7940,7 @@
 	patches.kernel.org/6.12.35-316-selftests-x86-Add-a-test-to-detect-infinite-S.patch
 	patches.kernel.org/6.12.35-317-ksmbd-fix-null-pointer-dereference-in-destroy.patch
 	patches.kernel.org/6.12.35-318-platform-x86-ideapad-laptop-use-usleep_range-.patch
+	patches.kernel.org/6.12.35-319-selinux-fix-selinux_xfrm_alloc_user-to-set-co.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
