--- a/series.conf
+++ b/series.conf
@@ -7692,6 +7692,7 @@
 	patches.kernel.org/6.12.35-068-media-imx-jpeg-Cleanup-after-an-allocation-er.patch
 	patches.kernel.org/6.12.35-069-media-uvcvideo-Return-the-number-of-processed.patch
 	patches.kernel.org/6.12.35-070-media-uvcvideo-Send-control-events-for-partia.patch
+	patches.kernel.org/6.12.35-071-media-uvcvideo-Fix-deferred-probing-error.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
