perf/core: Fix WARN in perf_cgroup_switch() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8024,6 +8024,7 @@
 	patches.kernel.org/6.12.35-400-s390-pci-Fix-__pcilg_mio_inuser-inline-assemb.patch
 	patches.kernel.org/6.12.35-401-perf-Fix-sample-vs-do_exit.patch
 	patches.kernel.org/6.12.35-402-perf-Fix-cgroup-state-vs-ERROR.patch
+	patches.kernel.org/6.12.35-403-perf-core-Fix-WARN-in-perf_cgroup_switch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
