e1000e: set fixed clock frequency indication for Nahum 11 and Nahum 13 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7988,6 +7988,7 @@
 	patches.kernel.org/6.12.35-364-io_uring-sqpoll-don-t-put-task_struct-on-tctx.patch
 	patches.kernel.org/6.12.35-365-net-ice-Perform-accurate-aRFS-flow-match.patch
 	patches.kernel.org/6.12.35-366-ice-fix-eswitch-code-memory-leak-in-reset-sce.patch
+	patches.kernel.org/6.12.35-367-e1000e-set-fixed-clock-frequency-indication-f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
