--- a/series.conf
+++ b/series.conf
@@ -7985,6 +7985,7 @@
 	patches.kernel.org/6.12.35-361-hwmon-ltc4282-avoid-repeated-register-write.patch
 	patches.kernel.org/6.12.35-362-pldmfw-Select-CRC32-when-PLDMFW-is-selected.patch
 	patches.kernel.org/6.12.35-363-aoe-clean-device-rq_list-in-aoedev_downdev.patch
+	patches.kernel.org/6.12.35-364-io_uring-sqpoll-don-t-put-task_struct-on-tctx.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
