pinctrl: armada-37xx: propagate error from armada_37xx_pmx_gpio_set_direction() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7850,6 +7850,7 @@
 	patches.kernel.org/6.12.35-226-pinctrl-armada-37xx-propagate-error-from-arma.patch
 	patches.kernel.org/6.12.35-227-bpf-Pass-the-same-orig_call-value-to-trampoli.patch
 	patches.kernel.org/6.12.35-228-net-stmmac-generate-software-timestamp-just-b.patch
+	patches.kernel.org/6.12.35-229-pinctrl-armada-37xx-propagate-error-from-arma.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
