ACPICA: fix acpi parse and parseext cache leaks (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7798,6 +7798,7 @@
 	patches.kernel.org/6.12.35-174-ASoC-intel-sdw_utils-Assign-initial-value-in-.patch
 	patches.kernel.org/6.12.35-175-ACPI-bus-Bail-out-if-acpi_kobj-registration-f.patch
 	patches.kernel.org/6.12.35-176-ACPI-Add-missing-prototype-for-non-CONFIG_SUS.patch
+	patches.kernel.org/6.12.35-177-ACPICA-fix-acpi-parse-and-parseext-cache-leak.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
