--- a/series.conf
+++ b/series.conf
@@ -7898,6 +7898,7 @@
 	patches.kernel.org/6.12.35-274-octeontx2-pf-Add-error-log-forcn10k_map_unmap.patch
 	patches.kernel.org/6.12.35-275-wifi-ath11k-determine-PM-policy-based-on-mach.patch
 	patches.kernel.org/6.12.35-276-wifi-ath12k-fix-link-valid-field-initializati.patch
+	patches.kernel.org/6.12.35-277-wifi-ath12k-fix-incorrect-CE-addresses.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
