--- a/series.conf
+++ b/series.conf
@@ -7759,6 +7759,7 @@
 	patches.kernel.org/6.12.35-135-pwm-axi-pwmgen-fix-missing-separate-external-.patch
 	patches.kernel.org/6.12.35-136-staging-iio-ad5933-Correct-settling-cycles-en.patch
 	patches.kernel.org/6.12.35-137-mips-Add-std-flag-specified-in-KBUILD_CFLAGS-.patch
+	patches.kernel.org/6.12.35-138-ovl-Fix-nested-backing-file-paths.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
