--- a/series.conf
+++ b/series.conf
@@ -7683,6 +7683,7 @@
 	patches.kernel.org/6.12.35-059-media-omap3isp-use-sgtable-based-scatterlist-.patch
 	patches.kernel.org/6.12.35-060-media-v4l2-dev-fix-error-handling-in-__video_.patch
 	patches.kernel.org/6.12.35-061-media-venus-Fix-probe-error-handling.patch
+	patches.kernel.org/6.12.35-062-media-videobuf2-use-sgtable-based-scatterlist.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
