selftests/x86: Add a test to detect infinite SIGTRAP handler loop (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7937,6 +7937,7 @@
 	patches.kernel.org/6.12.35-313-mm-close-theoretical-race-where-stale-TLB-ent.patch
 	patches.kernel.org/6.12.35-314-udmabuf-use-sgtable-based-scatterlist-wrapper.patch
 	patches.kernel.org/6.12.35-315-x86-virt-tdx-Avoid-indirect-calls-to-TDX-asse.patch
+	patches.kernel.org/6.12.35-316-selftests-x86-Add-a-test-to-detect-infinite-S.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
