--- a/series.conf
+++ b/series.conf
@@ -8005,6 +8005,7 @@
 	patches.kernel.org/6.12.35-381-tipc-fix-null-ptr-deref-when-acquiring-remote.patch
 	patches.kernel.org/6.12.35-382-tcp-fix-passive-TFO-socket-having-invalid-NAP.patch
 	patches.kernel.org/6.12.35-383-eth-fbnic-avoid-double-free-when-failing-to-D.patch
+	patches.kernel.org/6.12.35-384-net-lan743x-fix-potential-out-of-bounds-write.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
