hwmon: (ftsteutates) Fix TOCTOU race in fts_read() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7723,6 +7723,7 @@
 	patches.kernel.org/6.12.35-099-f2fs-fix-to-do-sanity-check-on-ino-and-xnid.patch
 	patches.kernel.org/6.12.35-100-f2fs-prevent-kernel-warning-due-to-negative-i.patch
 	patches.kernel.org/6.12.35-101-f2fs-fix-to-do-sanity-check-on-sit_bitmap_siz.patch
+	patches.kernel.org/6.12.35-102-hwmon-ftsteutates-Fix-TOCTOU-race-in-fts_read.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
