--- a/series.conf
+++ b/series.conf
@@ -7895,6 +7895,7 @@
 	patches.kernel.org/6.12.35-271-f2fs-fix-to-set-atomic-write-status-more-clea.patch
 	patches.kernel.org/6.12.35-272-bpf-sockmap-Fix-data-lost-during-EAGAIN-retri.patch
 	patches.kernel.org/6.12.35-273-net-ethernet-cortina-Use-TOE-TSO-on-all-TCP.patch
+	patches.kernel.org/6.12.35-274-octeontx2-pf-Add-error-log-forcn10k_map_unmap.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
