pinctrl: mcp23s08: Reset all pins to input at probe (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7883,6 +7883,7 @@
 	patches.kernel.org/6.12.35-259-net-ethernet-ti-am65-cpsw-handle-EPROBE_DEFER.patch
 	patches.kernel.org/6.12.35-260-software-node-Correct-a-OOB-check-in-software.patch
 	patches.kernel.org/6.12.35-261-isofs-fix-Y2038-and-Y2156-issues-in-Rock-Ridg.patch
+	patches.kernel.org/6.12.35-262-pinctrl-mcp23s08-Reset-all-pins-to-input-at-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
