bus: mhi: host: Fix conflict between power_up and SYSERR (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7701,6 +7701,7 @@
 	patches.kernel.org/6.12.35-077-block-use-plug-request-list-tail-for-one-shot.patch
 	patches.kernel.org/6.12.35-078-block-Clear-BIO_EMULATES_ZONE_APPEND-flag-on-.patch
 	patches.kernel.org/6.12.35-079-bus-mhi-ep-Update-read-pointer-only-after-buf.patch
+	patches.kernel.org/6.12.35-080-bus-mhi-host-Fix-conflict-between-power_up-an.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
