ixgbe: Fix unreachable retry logic in combined and byte I2C write functions (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7888,6 +7888,7 @@
 	patches.kernel.org/6.12.35-264-scsi-lpfc-Use-memcpy-for-BIOS-version.patch
 	patches.kernel.org/6.12.35-265-sock-Correct-error-checking-condition-for-ass.patch
 	patches.kernel.org/6.12.35-266-i40e-fix-MMIO-write-access-to-an-invalid-page.patch
+	patches.kernel.org/6.12.35-267-ixgbe-Fix-unreachable-retry-logic-in-combined.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
