--- a/series.conf
+++ b/series.conf
@@ -7923,6 +7923,7 @@
 	patches.kernel.org/6.12.35-299-LoongArch-vDSO-Correctly-use-asm-parameters-i.patch
 	patches.kernel.org/6.12.35-300-LoongArch-Avoid-using-r0-r1-as-mask-for-csrxc.patch
 	patches.kernel.org/6.12.35-301-LoongArch-Fix-panic-caused-by-NULL-PMD-in-hug.patch
+	patches.kernel.org/6.12.35-302-jffs2-check-that-raw-node-were-preallocated-b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
