--- a/series.conf
+++ b/series.conf
@@ -7774,6 +7774,7 @@
 	patches.kernel.org/6.12.35-150-PCI-cadence-ep-Correct-PBA-offset-in-.set_msi.patch
 	patches.kernel.org/6.12.35-151-PCI-dwc-ep-Correct-PBA-offset-in-.set_msix-ca.patch
 	patches.kernel.org/6.12.35-152-PCI-Add-ACS-quirk-for-Loongson-PCIe.patch
+	patches.kernel.org/6.12.35-153-PCI-Fix-lock-symmetry-in-pci_slot_unlock.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
