--- a/series.conf
+++ b/series.conf
@@ -7974,6 +7974,7 @@
 	patches.kernel.org/6.12.35-350-smb-fix-secondary-channel-creation-issue-with.patch
 	patches.kernel.org/6.12.35-351-drm-msm-disp-Correct-porch-timing-for-SDM845.patch
 	patches.kernel.org/6.12.35-352-drm-msm-dsi-dsi_phy_10nm-Fix-missing-initial-.patch
+	patches.kernel.org/6.12.35-353-drm-msm-Fix-CP_RESET_CONTEXT_STATE-bitfield-n.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
