x86/virt/tdx: Avoid indirect calls to TDX assembly functions (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7936,6 +7936,7 @@
 	patches.kernel.org/6.12.35-312-net-clear-the-dst-when-changing-skb-protocol.patch
 	patches.kernel.org/6.12.35-313-mm-close-theoretical-race-where-stale-TLB-ent.patch
 	patches.kernel.org/6.12.35-314-udmabuf-use-sgtable-based-scatterlist-wrapper.patch
+	patches.kernel.org/6.12.35-315-x86-virt-tdx-Avoid-indirect-calls-to-TDX-asse.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
