crypto: qat - add shutdown handler to qat_c3xxx (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7625,6 +7625,7 @@
 	patches.kernel.org/6.12.35-001-configfs-Do-not-override-creating-attribute-f.patch
 	patches.kernel.org/6.12.35-002-crypto-marvell-cesa-Do-not-chain-submitted-re.patch
 	patches.kernel.org/6.12.35-003-gfs2-move-msleep-to-sleepable-context.patch
+	patches.kernel.org/6.12.35-004-crypto-qat-add-shutdown-handler-to-qat_c3xxx.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
