ASoC: qcom: sdm845: Add error handling in sdm845_slim_snd_hw_params() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7630,6 +7630,7 @@
 	patches.kernel.org/6.12.35-006-crypto-qat-add-shutdown-handler-to-qat_4xxx.patch
 	patches.kernel.org/6.12.35-007-crypto-qat-add-shutdown-handler-to-qat_c62x.patch
 	patches.kernel.org/6.12.35-008-crypto-qat-add-shutdown-handler-to-qat_dh895x.patch
+	patches.kernel.org/6.12.35-009-ASoC-qcom-sdm845-Add-error-handling-in-sdm845.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
