media: imx-jpeg: Move mxc_jpeg_free_slot_data() ahead (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7687,6 +7687,7 @@
 	patches.kernel.org/6.12.35-063-media-vidtv-Terminating-the-subsequent-proces.patch
 	patches.kernel.org/6.12.35-064-media-vivid-Change-the-siize-of-the-composing.patch
 	patches.kernel.org/6.12.35-065-media-imx-jpeg-Drop-the-first-error-frames.patch
+	patches.kernel.org/6.12.35-066-media-imx-jpeg-Move-mxc_jpeg_free_slot_data-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
