--- a/series.conf
+++ b/series.conf
@@ -7674,6 +7674,7 @@
 	patches.kernel.org/6.12.35-050-media-ccs-pll-Check-for-too-high-VT-PLL-multi.patch
 	patches.kernel.org/6.12.35-051-media-cxusb-no-longer-judge-rbuf-when-the-wri.patch
 	patches.kernel.org/6.12.35-052-media-davinci-vpif-Fix-memory-leak-in-probe-e.patch
+	patches.kernel.org/6.12.35-053-media-gspca-Add-error-handling-for-stv06xx_re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
