--- a/series.conf
+++ b/series.conf
@@ -7992,6 +7992,7 @@
 	patches.kernel.org/6.12.35-368-workqueue-Initialize-wq_isolated_cpumask-in-w.patch
 	patches.kernel.org/6.12.35-369-ksmbd-add-free_transport-ops-in-ksmbd-connect.patch
 	patches.kernel.org/6.12.35-370-net-netmem-fix-skb_ensure_writable-with-unrea.patch
+	patches.kernel.org/6.12.35-371-bnxt_en-Fix-double-invocation-of-bnxt_ulp_sto.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
