--- a/series.conf
+++ b/series.conf
@@ -8014,6 +8014,7 @@
 	patches.kernel.org/6.12.35-390-mlxbf_gige-return-EPROBE_DEFER-if-PHY-IRQ-is-.patch
 	patches.kernel.org/6.12.35-391-net-atm-add-lec_mutex.patch
 	patches.kernel.org/6.12.35-392-net-atm-fix-proc-net-atm-lec-handling.patch
+	patches.kernel.org/6.12.35-393-EDAC-amd64-Correct-number-of-UMCs-for-family-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
