wifi: rtw88: usb: Upload the firmware in bigger chunks (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7647,6 +7647,7 @@
 	patches.kernel.org/6.12.35-023-wifi-p54-prevent-buffer-overflow-in-p54_rx_ee.patch
 	patches.kernel.org/6.12.35-024-wifi-mt76-mt7925-fix-host-interrupt-register-.patch
 	patches.kernel.org/6.12.35-025-wifi-ath11k-fix-rx-completion-meta-data-corru.patch
+	patches.kernel.org/6.12.35-026-wifi-rtw88-usb-Upload-the-firmware-in-bigger-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
