firmware: arm_scmi: Ensure that the message-id supports fastchannel (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7741,6 +7741,7 @@
 	patches.kernel.org/6.12.35-117-mm-fix-ratelimit_pages-update-error-in-dirty_.patch
 	patches.kernel.org/6.12.35-118-soc-qcom-pmic_glink_altmode-fix-spurious-DP-h.patch
 	patches.kernel.org/6.12.35-119-configfs-tsm-report-Fix-NULL-dereference-of-t.patch
+	patches.kernel.org/6.12.35-120-firmware-arm_scmi-Ensure-that-the-message-id-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
