f2fs: fix to bail out in get_new_segment() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7860,6 +7860,7 @@
 	patches.kernel.org/6.12.35-236-clk-rockchip-rk3036-mark-ddrphy-as-critical.patch
 	patches.kernel.org/6.12.35-237-hid-asus-check-ROG-Ally-MCU-version-and-warn.patch
 	patches.kernel.org/6.12.35-238-wifi-iwlwifi-mvm-fix-beacon-CCK-flag.patch
+	patches.kernel.org/6.12.35-239-f2fs-fix-to-bail-out-in-get_new_segment.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
