--- a/series.conf
+++ b/series.conf
@@ -7742,6 +7742,7 @@
 	patches.kernel.org/6.12.35-118-soc-qcom-pmic_glink_altmode-fix-spurious-DP-h.patch
 	patches.kernel.org/6.12.35-119-configfs-tsm-report-Fix-NULL-dereference-of-t.patch
 	patches.kernel.org/6.12.35-120-firmware-arm_scmi-Ensure-that-the-message-id-.patch
+	patches.kernel.org/6.12.35-121-mtd-rawnand-sunxi-Add-randomizer-configuratio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
