f2fs: fix to do sanity check on sit_bitmap_size (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7722,6 +7722,7 @@
 	patches.kernel.org/6.12.35-098-Input-gpio-keys-fix-possible-concurrent-acces.patch
 	patches.kernel.org/6.12.35-099-f2fs-fix-to-do-sanity-check-on-ino-and-xnid.patch
 	patches.kernel.org/6.12.35-100-f2fs-prevent-kernel-warning-due-to-negative-i.patch
+	patches.kernel.org/6.12.35-101-f2fs-fix-to-do-sanity-check-on-sit_bitmap_siz.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
