--- a/series.conf
+++ b/series.conf
@@ -8029,6 +8029,7 @@
 	patches.kernel.org/6.12.35-405-scsi-elx-efct-Fix-memory-leak-in-efct_hw_pars.patch
 	patches.kernel.org/6.12.35-406-RISC-V-KVM-Fix-the-size-parameter-check-in-SB.patch
 	patches.kernel.org/6.12.35-407-RISC-V-KVM-Don-t-treat-SBI-HFENCE-calls-as-NO.patch
+	patches.kernel.org/6.12.35-408-gpio-pca953x-fix-wrong-error-probe-return-val.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
