vxlan: Do not treat dst cache initialization errors as fatal (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7877,6 +7877,7 @@
 	patches.kernel.org/6.12.35-253-wifi-iwlwifi-Add-missing-MODULE_FIRMWARE-for-.patch
 	patches.kernel.org/6.12.35-254-net-bridge-mcast-update-multicast-contex-when.patch
 	patches.kernel.org/6.12.35-255-net-bridge-mcast-re-implement-br_multicast_-e.patch
+	patches.kernel.org/6.12.35-256-vxlan-Do-not-treat-dst-cache-initialization-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
