regulator: max14577: Add error check for max14577_read_reg() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7760,6 +7760,7 @@
 	patches.kernel.org/6.12.35-136-staging-iio-ad5933-Correct-settling-cycles-en.patch
 	patches.kernel.org/6.12.35-137-mips-Add-std-flag-specified-in-KBUILD_CFLAGS-.patch
 	patches.kernel.org/6.12.35-138-ovl-Fix-nested-backing-file-paths.patch
+	patches.kernel.org/6.12.35-139-regulator-max14577-Add-error-check-for-max145.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
