clk: meson-g12a: add missing fclk_div2 to spicc (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7734,6 +7734,7 @@
 	patches.kernel.org/6.12.35-110-parisc-unaligned-Fix-hex-output-to-show-8-hex.patch
 	patches.kernel.org/6.12.35-111-vgacon-Add-check-for-vc_origin-address-range-.patch
 	patches.kernel.org/6.12.35-112-parisc-fix-building-with-gcc-15.patch
+	patches.kernel.org/6.12.35-113-clk-meson-g12a-add-missing-fclk_div2-to-spicc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
