iio: imu: inv_icm42600: Fix temperature calculation (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7784,6 +7784,7 @@
 	patches.kernel.org/6.12.35-160-accel-ivpu-Fix-warning-in-ivpu_gem_bo_free.patch
 	patches.kernel.org/6.12.35-161-dummycon-Trigger-redraw-when-switching-consol.patch
 	patches.kernel.org/6.12.35-162-mm-hugetlb-fix-huge_pmd_unshare-vs-GUP-fast-r.patch
+	patches.kernel.org/6.12.35-163-iio-imu-inv_icm42600-Fix-temperature-calculat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
