--- a/series.conf
+++ b/series.conf
@@ -7887,6 +7887,7 @@
 	patches.kernel.org/6.12.35-263-wifi-ath12k-fix-failed-to-set-mhi-state-error.patch
 	patches.kernel.org/6.12.35-264-scsi-lpfc-Use-memcpy-for-BIOS-version.patch
 	patches.kernel.org/6.12.35-265-sock-Correct-error-checking-condition-for-ass.patch
+	patches.kernel.org/6.12.35-266-i40e-fix-MMIO-write-access-to-an-invalid-page.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
