--- a/series.conf
+++ b/series.conf
@@ -8033,6 +8033,7 @@
 	patches.kernel.org/6.12.35-409-perf-evsel-Missed-close-when-probing-hybrid-c.patch
 	patches.kernel.org/6.12.35-410-perf-test-Directory-file-descriptor-leak.patch
 	patches.kernel.org/6.12.35-411-gpio-mlxbf3-only-get-IRQ-for-device-instance-.patch
+	patches.kernel.org/6.12.35-412-cifs-Remove-duplicate-fattr-cf_dtype-assignme.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
