--- a/series.conf
+++ b/series.conf
@@ -7849,6 +7849,7 @@
 	patches.kernel.org/6.12.35-225-pinctrl-armada-37xx-propagate-error-from-arma.patch
 	patches.kernel.org/6.12.35-226-pinctrl-armada-37xx-propagate-error-from-arma.patch
 	patches.kernel.org/6.12.35-227-bpf-Pass-the-same-orig_call-value-to-trampoli.patch
+	patches.kernel.org/6.12.35-228-net-stmmac-generate-software-timestamp-just-b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
