net: clear the dst when changing skb protocol (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7933,6 +7933,7 @@
 	patches.kernel.org/6.12.35-309-scsi-s390-zfcp-Ensure-synchronous-unit_add.patch
 	patches.kernel.org/6.12.35-310-nvme-always-punt-polled-uring_cmd-end_io-work.patch
 	patches.kernel.org/6.12.35-311-net_sched-sch_sfq-reject-invalid-perturb-peri.patch
+	patches.kernel.org/6.12.35-312-net-clear-the-dst-when-changing-skb-protocol.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
