clk: rockchip: rk3036: mark ddrphy as critical (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7857,6 +7857,7 @@
 	patches.kernel.org/6.12.35-233-net-vertexcom-mse102x-Return-code-for-mse102x.patch
 	patches.kernel.org/6.12.35-234-wireless-purelifi-plfxlc-fix-memory-leak-in-p.patch
 	patches.kernel.org/6.12.35-235-wifi-mac80211-do-not-offer-a-mesh-path-if-for.patch
+	patches.kernel.org/6.12.35-236-clk-rockchip-rk3036-mark-ddrphy-as-critical.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
