--- a/series.conf
+++ b/series.conf
@@ -7963,6 +7963,7 @@
 	patches.kernel.org/6.12.35-339-rust-compile-libcore-with-edition-2024-for-1..patch
 	patches.kernel.org/6.12.35-340-net-Fix-checksum-update-for-ILA-adj-transport.patch
 	patches.kernel.org/6.12.35-341-bpf-Fix-L4-csum-update-on-IPv6-in-CHECKSUM_CO.patch
+	patches.kernel.org/6.12.35-342-erofs-remove-unused-trace-event-erofs_destroy.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
