drm/xe: Wire up device shutdown handler (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8007,6 +8007,7 @@
 	patches.kernel.org/6.12.35-383-eth-fbnic-avoid-double-free-when-failing-to-D.patch
 	patches.kernel.org/6.12.35-384-net-lan743x-fix-potential-out-of-bounds-write.patch
 	patches.kernel.org/6.12.35-385-ublk-santizize-the-arguments-from-userspace-w.patch
+	patches.kernel.org/6.12.35-386-drm-xe-Wire-up-device-shutdown-handler.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
