--- a/series.conf
+++ b/series.conf
@@ -7699,6 +7699,7 @@
 	patches.kernel.org/6.12.35-075-ASoC-codecs-wcd9375-Fix-double-free-of-regula.patch
 	patches.kernel.org/6.12.35-076-ASoC-codecs-wcd937x-Drop-unused-buck_supply.patch
 	patches.kernel.org/6.12.35-077-block-use-plug-request-list-tail-for-one-shot.patch
+	patches.kernel.org/6.12.35-078-block-Clear-BIO_EMULATES_ZONE_APPEND-flag-on-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
