libbpf: Add identical pointer detection to btf_dedup_is_equiv() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7862,6 +7862,7 @@
 	patches.kernel.org/6.12.35-238-wifi-iwlwifi-mvm-fix-beacon-CCK-flag.patch
 	patches.kernel.org/6.12.35-239-f2fs-fix-to-bail-out-in-get_new_segment.patch
 	patches.kernel.org/6.12.35-240-netfilter-nft_set_pipapo-clamp-maximum-map-bu.patch
+	patches.kernel.org/6.12.35-241-libbpf-Add-identical-pointer-detection-to-btf.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
