ceph: avoid kernel BUG for encrypted inode with unaligned file size (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7704,6 +7704,7 @@
 	patches.kernel.org/6.12.35-080-bus-mhi-host-Fix-conflict-between-power_up-an.patch
 	patches.kernel.org/6.12.35-081-can-kvaser_pciefd-refine-error-prone-echo_skb.patch
 	patches.kernel.org/6.12.35-082-can-tcan4x5x-fix-power-regulator-retrieval-du.patch
+	patches.kernel.org/6.12.35-083-ceph-avoid-kernel-BUG-for-encrypted-inode-wit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
