bus: mhi: ep: Update read pointer only after buffer is written (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7700,6 +7700,7 @@
 	patches.kernel.org/6.12.35-076-ASoC-codecs-wcd937x-Drop-unused-buck_supply.patch
 	patches.kernel.org/6.12.35-077-block-use-plug-request-list-tail-for-one-shot.patch
 	patches.kernel.org/6.12.35-078-block-Clear-BIO_EMULATES_ZONE_APPEND-flag-on-.patch
+	patches.kernel.org/6.12.35-079-bus-mhi-ep-Update-read-pointer-only-after-buf.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
