--- a/series.conf
+++ b/series.conf
@@ -7649,6 +7649,7 @@
 	patches.kernel.org/6.12.35-025-wifi-ath11k-fix-rx-completion-meta-data-corru.patch
 	patches.kernel.org/6.12.35-026-wifi-rtw88-usb-Upload-the-firmware-in-bigger-.patch
 	patches.kernel.org/6.12.35-027-wifi-ath11k-fix-ring-buffer-corruption.patch
+	patches.kernel.org/6.12.35-028-NFSD-unregister-filesystem-in-case-genl_regis.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
