accel/ivpu: Use dma_resv_lock() instead of a custom mutex (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7780,6 +7780,7 @@
 	patches.kernel.org/6.12.35-156-iio-accel-fxls8962af-Fix-temperature-scan-ele.patch
 	patches.kernel.org/6.12.35-157-accel-ivpu-Improve-buffer-object-logging.patch
 	patches.kernel.org/6.12.35-158-accel-ivpu-Use-firmware-names-from-upstream-r.patch
+	patches.kernel.org/6.12.35-159-accel-ivpu-Use-dma_resv_lock-instead-of-a-cus.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
