--- a/series.conf
+++ b/series.conf
@@ -7746,6 +7746,7 @@
 	patches.kernel.org/6.12.35-122-mtd-nand-sunxi-Add-randomizer-configuration-b.patch
 	patches.kernel.org/6.12.35-123-KVM-SVM-Clear-current_vmcb-during-vCPU-free-f.patch
 	patches.kernel.org/6.12.35-124-KVM-VMX-Flush-shadow-VMCS-on-emergency-reboot.patch
+	patches.kernel.org/6.12.35-125-dm-mirror-fix-a-tiny-race-condition.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
