--- a/series.conf
+++ b/series.conf
@@ -7867,6 +7867,7 @@
 	patches.kernel.org/6.12.35-243-scsi-smartpqi-Add-new-PCI-IDs.patch
 	patches.kernel.org/6.12.35-244-iommu-amd-Ensure-GA-log-notifier-callbacks-fi.patch
 	patches.kernel.org/6.12.35-245-wifi-iwlwifi-pcie-make-sure-to-lock-rxq-read.patch
+	patches.kernel.org/6.12.35-246-wifi-rtw89-8922a-fix-TX-fail-with-wrong-VCO-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
