dm: lock limits when reading them (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7750,6 +7750,7 @@
 	patches.kernel.org/6.12.35-126-dm-verity-fix-a-memory-leak-if-some-arguments.patch
 	patches.kernel.org/6.12.35-127-mtd-rawnand-qcom-Fix-read-len-for-onfi-param-.patch
 	patches.kernel.org/6.12.35-128-ftrace-Fix-UAF-when-lookup-kallsym-after-ftra.patch
+	patches.kernel.org/6.12.35-129-dm-lock-limits-when-reading-them.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
