drm/ssd130x: fix ssd132x_clear_screen() columns (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7976,6 +7976,7 @@
 	patches.kernel.org/6.12.35-352-drm-msm-dsi-dsi_phy_10nm-Fix-missing-initial-.patch
 	patches.kernel.org/6.12.35-353-drm-msm-Fix-CP_RESET_CONTEXT_STATE-bitfield-n.patch
 	patches.kernel.org/6.12.35-354-drm-msm-a7xx-Call-CP_RESET_CONTEXT_STATE.patch
+	patches.kernel.org/6.12.35-355-drm-ssd130x-fix-ssd132x_clear_screen-columns.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
