--- a/series.conf
+++ b/series.conf
@@ -7947,6 +7947,7 @@
 	patches.kernel.org/6.12.35-323-wifi-rtw89-phy-add-dummy-C2H-event-handler-fo.patch
 	patches.kernel.org/6.12.35-324-cpufreq-amd-pstate-Add-missing-NULL-ptr-check.patch
 	patches.kernel.org/6.12.35-325-Input-sparcspkr-avoid-unannotated-fall-throug.patch
+	patches.kernel.org/6.12.35-326-wifi-ath12k-Clear-affinity-hint-before-callin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
