power: supply: collie: Fix wakeup source leaks on device unbind (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7791,6 +7791,7 @@
 	patches.kernel.org/6.12.35-167-ACPICA-fix-acpi-operand-cache-leak-in-dswstat.patch
 	patches.kernel.org/6.12.35-168-ASoC-amd-yc-Add-quirk-for-Lenovo-Yoga-Pro-7-1.patch
 	patches.kernel.org/6.12.35-169-clocksource-Fix-the-CPUs-choice-in-the-watchd.patch
+	patches.kernel.org/6.12.35-170-power-supply-collie-Fix-wakeup-source-leaks-o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
