PM: runtime: fix denying of auto suspend in pm_suspend_timer_fn() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7808,6 +7808,7 @@
 	patches.kernel.org/6.12.35-184-ASoC-tegra210_ahub-Add-check-to-of_device_get.patch
 	patches.kernel.org/6.12.35-185-Make-cc-option-work-correctly-for-the-Wno-xyz.patch
 	patches.kernel.org/6.12.35-186-gpiolib-of-Add-polarity-quirk-for-s5m8767.patch
+	patches.kernel.org/6.12.35-187-PM-runtime-fix-denying-of-auto-suspend-in-pm_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
