--- a/series.conf
+++ b/series.conf
@@ -7856,6 +7856,7 @@
 	patches.kernel.org/6.12.35-232-net-mlx4-add-SOF_TIMESTAMPING_TX_SOFTWARE-fla.patch
 	patches.kernel.org/6.12.35-233-net-vertexcom-mse102x-Return-code-for-mse102x.patch
 	patches.kernel.org/6.12.35-234-wireless-purelifi-plfxlc-fix-memory-leak-in-p.patch
+	patches.kernel.org/6.12.35-235-wifi-mac80211-do-not-offer-a-mesh-path-if-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
