--- a/series.conf
+++ b/series.conf
@@ -7678,6 +7678,7 @@
 	patches.kernel.org/6.12.35-054-media-i2c-imx335-Fix-frame-size-enumeration.patch
 	patches.kernel.org/6.12.35-055-media-imagination-fix-a-potential-memory-leak.patch
 	patches.kernel.org/6.12.35-056-media-intel-ipu6-Fix-dma-mask-for-non-secure-.patch
+	patches.kernel.org/6.12.35-057-media-ipu6-Remove-workaround-for-Meteor-Lake-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
