--- a/series.conf
+++ b/series.conf
@@ -8025,6 +8025,7 @@
 	patches.kernel.org/6.12.35-401-perf-Fix-sample-vs-do_exit.patch
 	patches.kernel.org/6.12.35-402-perf-Fix-cgroup-state-vs-ERROR.patch
 	patches.kernel.org/6.12.35-403-perf-core-Fix-WARN-in-perf_cgroup_switch.patch
+	patches.kernel.org/6.12.35-404-arm64-ptrace-Fix-stack-out-of-bounds-read-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
