--- a/series.conf
+++ b/series.conf
@@ -7636,6 +7636,7 @@
 	patches.kernel.org/6.12.35-012-io_uring-account-drain-memory-to-cgroup.patch
 	patches.kernel.org/6.12.35-013-io_uring-kbuf-account-ring-io_buffer_list-mem.patch
 	patches.kernel.org/6.12.35-014-powerpc-pseries-msi-Avoid-reading-PCI-device-.patch
+	patches.kernel.org/6.12.35-015-s390-pci-Remove-redundant-bus-removal-and-dis.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
