wifi: mt76: mt7996: drop fragments with multicast or broadcast RA (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7818,6 +7818,7 @@
 	patches.kernel.org/6.12.35-194-bpf-Check-rcu_read_lock_trace_held-in-bpf_map.patch
 	patches.kernel.org/6.12.35-195-Bluetooth-btusb-Add-new-VID-PID-13d3-3584-for.patch
 	patches.kernel.org/6.12.35-196-i2c-designware-Invoke-runtime-suspend-on-quic.patch
+	patches.kernel.org/6.12.35-197-wifi-mt76-mt7996-drop-fragments-with-multicas.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
