PCI: dw-rockchip: Remove PCIE_L0S_ENTRY check from rockchip_pcie_link_up() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7775,6 +7775,7 @@
 	patches.kernel.org/6.12.35-151-PCI-dwc-ep-Correct-PBA-offset-in-.set_msix-ca.patch
 	patches.kernel.org/6.12.35-152-PCI-Add-ACS-quirk-for-Loongson-PCIe.patch
 	patches.kernel.org/6.12.35-153-PCI-Fix-lock-symmetry-in-pci_slot_unlock.patch
+	patches.kernel.org/6.12.35-154-PCI-dw-rockchip-Remove-PCIE_L0S_ENTRY-check-f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
