drm/msm/a7xx: Call CP_RESET_CONTEXT_STATE (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7975,6 +7975,7 @@
 	patches.kernel.org/6.12.35-351-drm-msm-disp-Correct-porch-timing-for-SDM845.patch
 	patches.kernel.org/6.12.35-352-drm-msm-dsi-dsi_phy_10nm-Fix-missing-initial-.patch
 	patches.kernel.org/6.12.35-353-drm-msm-Fix-CP_RESET_CONTEXT_STATE-bitfield-n.patch
+	patches.kernel.org/6.12.35-354-drm-msm-a7xx-Call-CP_RESET_CONTEXT_STATE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
