--- a/series.conf
+++ b/series.conf
@@ -7841,6 +7841,7 @@
 	patches.kernel.org/6.12.35-217-tcp-remove-zero-TCP-TS-samples-for-autotuning.patch
 	patches.kernel.org/6.12.35-218-tcp-fix-initial-tp-rcvq_space.space-value-for.patch
 	patches.kernel.org/6.12.35-219-tcp-add-receive-queue-awareness-in-tcp_rcv_sp.patch
+	patches.kernel.org/6.12.35-220-x86-sgx-Prevent-attempts-to-reclaim-poisoned-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
