--- a/series.conf
+++ b/series.conf
@@ -7977,6 +7977,7 @@
 	patches.kernel.org/6.12.35-353-drm-msm-Fix-CP_RESET_CONTEXT_STATE-bitfield-n.patch
 	patches.kernel.org/6.12.35-354-drm-msm-a7xx-Call-CP_RESET_CONTEXT_STATE.patch
 	patches.kernel.org/6.12.35-355-drm-ssd130x-fix-ssd132x_clear_screen-columns.patch
+	patches.kernel.org/6.12.35-356-ionic-Prevent-driver-fw-getting-out-of-sync-o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
