nfsd: use threads array as-is in netlink interface (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7964,6 +7964,7 @@
 	patches.kernel.org/6.12.35-340-net-Fix-checksum-update-for-ILA-adj-transport.patch
 	patches.kernel.org/6.12.35-341-bpf-Fix-L4-csum-update-on-IPv6-in-CHECKSUM_CO.patch
 	patches.kernel.org/6.12.35-342-erofs-remove-unused-trace-event-erofs_destroy.patch
+	patches.kernel.org/6.12.35-343-nfsd-use-threads-array-as-is-in-netlink-inter.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
