--- a/series.conf
+++ b/series.conf
@@ -7669,6 +7669,7 @@
 	patches.kernel.org/6.12.35-045-media-i2c-ds90ub913-Fix-returned-fmt-from-.se.patch
 	patches.kernel.org/6.12.35-046-media-ccs-pll-Start-VT-pre-PLL-multiplier-sea.patch
 	patches.kernel.org/6.12.35-047-media-ov2740-Move-pm-runtime-cleanup-on-probe.patch
+	patches.kernel.org/6.12.35-048-media-ccs-pll-Start-OP-pre-PLL-multiplier-sea.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
