--- a/series.conf
+++ b/series.conf
@@ -7786,6 +7786,7 @@
 	patches.kernel.org/6.12.35-162-mm-hugetlb-fix-huge_pmd_unshare-vs-GUP-fast-r.patch
 	patches.kernel.org/6.12.35-163-iio-imu-inv_icm42600-Fix-temperature-calculat.patch
 	patches.kernel.org/6.12.35-164-iio-adc-ad7944-mask-high-bits-on-direct-read.patch
+	patches.kernel.org/6.12.35-165-iio-adc-ti-ads1298-Kconfig-add-kfifo-dependen.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
