--- a/series.conf
+++ b/series.conf
@@ -7758,6 +7758,7 @@
 	patches.kernel.org/6.12.35-134-video-screen_info-Relocate-framebuffers-behin.patch
 	patches.kernel.org/6.12.35-135-pwm-axi-pwmgen-fix-missing-separate-external-.patch
 	patches.kernel.org/6.12.35-136-staging-iio-ad5933-Correct-settling-cycles-en.patch
+	patches.kernel.org/6.12.35-137-mips-Add-std-flag-specified-in-KBUILD_CFLAGS-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
