--- a/series.conf
+++ b/series.conf
@@ -7812,6 +7812,7 @@
 	patches.kernel.org/6.12.35-188-power-supply-max17040-adjust-thermal-channel-.patch
 	patches.kernel.org/6.12.35-189-ACPI-battery-negate-current-when-discharging.patch
 	patches.kernel.org/6.12.35-190-net-macb-Check-return-value-of-dma_set_mask_a.patch
+	patches.kernel.org/6.12.35-191-net-lan743x-Modify-the-EEPROM-and-OTP-size-fo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
