--- a/series.conf
+++ b/series.conf
@@ -7773,6 +7773,7 @@
 	patches.kernel.org/6.12.35-149-uio_hv_generic-Align-ring-size-to-system-page.patch
 	patches.kernel.org/6.12.35-150-PCI-cadence-ep-Correct-PBA-offset-in-.set_msi.patch
 	patches.kernel.org/6.12.35-151-PCI-dwc-ep-Correct-PBA-offset-in-.set_msix-ca.patch
+	patches.kernel.org/6.12.35-152-PCI-Add-ACS-quirk-for-Loongson-PCIe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
