--- a/series.conf
+++ b/series.conf
@@ -7632,6 +7632,7 @@
 	patches.kernel.org/6.12.35-008-crypto-qat-add-shutdown-handler-to-qat_dh895x.patch
 	patches.kernel.org/6.12.35-009-ASoC-qcom-sdm845-Add-error-handling-in-sdm845.patch
 	patches.kernel.org/6.12.35-010-ASoC-meson-meson-card-utils-use-of_property_p.patch
+	patches.kernel.org/6.12.35-011-ASoC-amd-sof_amd_sdw-Fix-unlikely-uninitializ.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
