--- a/series.conf
+++ b/series.conf
@@ -7892,6 +7892,7 @@
 	patches.kernel.org/6.12.35-268-RDMA-hns-initialize-db-in-update_srq_db.patch
 	patches.kernel.org/6.12.35-269-ice-fix-check-for-existing-switch-rule.patch
 	patches.kernel.org/6.12.35-270-usbnet-asix-AX88772-leave-the-carrier-control.patch
+	patches.kernel.org/6.12.35-271-f2fs-fix-to-set-atomic-write-status-more-clea.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
