--- a/series.conf
+++ b/series.conf
@@ -7941,6 +7941,7 @@
 	patches.kernel.org/6.12.35-317-ksmbd-fix-null-pointer-dereference-in-destroy.patch
 	patches.kernel.org/6.12.35-318-platform-x86-ideapad-laptop-use-usleep_range-.patch
 	patches.kernel.org/6.12.35-319-selinux-fix-selinux_xfrm_alloc_user-to-set-co.patch
+	patches.kernel.org/6.12.35-320-platform-x86-intel-uncore-freq-Fail-module-lo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
