smb: client: fix first command failure during re-negotiation (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8019,6 +8019,7 @@
 	patches.kernel.org/6.12.35-395-smb-Log-an-error-when-close_all_cached_dirs-f.patch
 	patches.kernel.org/6.12.35-396-serial-sh-sci-Clean-sci_ports-0-after-at-earl.patch
 	patches.kernel.org/6.12.35-397-serial-sh-sci-Increment-the-runtime-usage-cou.patch
+	patches.kernel.org/6.12.35-398-smb-client-fix-first-command-failure-during-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
