ata: ahci: Disallow LPM for ASUSPRO-D840SA motherboard (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7709,6 +7709,7 @@
 	patches.kernel.org/6.12.35-085-cgroup-freezer-fix-incomplete-freezing-when-a.patch
 	patches.kernel.org/6.12.35-086-bus-firewall-Fix-missing-static-inline-annota.patch
 	patches.kernel.org/6.12.35-087-ata-pata_via-Force-PIO-for-ATAPI-devices-on-V.patch
+	patches.kernel.org/6.12.35-088-ata-ahci-Disallow-LPM-for-ASUSPRO-D840SA-moth.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
